--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
   <body>
     <canvas id="gameScreen" width="800" height="600"></canvas>
     <div id="app"></div>
-    <script src="src/index.js"></script>
+    <script type="module" src="./src/index.js"></script>
   </body>
 </html>
